# monty_django

./: .dockerignore  .gitignore  Dockerfile  Makefile  deploy-dev.sh  deploy.sh  entrypoint.sh  flake.nix  main.py  makefile  manage.py  pyproject.toml  secrets.age  yoink.yaml
chumps/: admin.py  apps.py  models.py  services.py  urls.py  views.py
chumps/management/commands/: injest_chumps_from_astro.py
chumps/migrations/: 0001_initial.py  0002_chumpmedia_media_order.py  0003_era_specialevent_alter_chumpmedia_media.py  0004_remove_specialevent_text.py  0005_remove_era_headline_remove_specialevent_headline_and_more.py  0006_alter_era_end_date.py
chumps/static/css/1990/: history.css  layout.css  main.css  menu.css
chumps/static/images/bg/: backgrounds.json
chumps/static/images/bg/bgg/: backg72.-2-gif
chumps/static/images/general/: DesNovoEden.html  boulevard.htm
chumps/static/index/: monty.css
chumps/templates/: base.html  index.html
chumps/templates/1990/: _layout.html  _menu.html  cool_pix.html  entry.html  history.html  index.html  mycats.html  stats.html  wpaper.html
chumps/templates/1990 copy/: _layout.html  _menu.html  entry.html  index.html
guestbook/: constants.py  forms.py  models.py  urls.py  views.py
guestbook/migrations/: 0001_initial.py  0002_rename_created_entry_published.py  0003_alter_entry_options.py
guestbook/static/css/: guestbook.css
guestbook/templates/guest/: index.html  sign.html
guestbook/templatetags/: guestbook_tags.py
monty_project/: asgi.py  middleware.py  settings.py  storage.py  urls.py  wsgi.py
