[project]
name = "monty-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-countries>=9.0.0",
    "django-simple-captcha>=0.6.3",
    "pillow>=12.1.1",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.3.0",
]
